Small fix to functionality